Testing simple collision avoidance